Alignment clock fix.

--- a/src/Client.css
+++ b/src/Client.css
@@ -90,7 +90,7 @@
   font-weight: 660;
   text-align: left;
   font-size: 17px;
-  width: 175px;
+  width: 200px;
   height: 45px;
   -webkit-appearance: none;
   -moz-appearance: none;
@@ -99,11 +99,11 @@
   background-position: right 10px center;
   background-repeat: no-repeat;
   background-size: 12px;
-  padding-right: 30px;
+  margin-right: 10px;
 }
 
 .clock-icon {
-  /* flex: 0; */
-  margin-left: 17px;
+  /* flex: 1; */
+  margin-right: 17px;
   height: 26px;
 }
